<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/bottom_banner_height"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/btn_paint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/edit"
            android:src="@drawable/edit_image_pen_tool_selector" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_stickers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/stickers"
            android:src="@drawable/edit_image_emotion_selector" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/text"
            android:src="@drawable/edit_image_text_tool_selector" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_mosaic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/mosaic"
            android:src="@drawable/edit_image_mosaic_tool_selector" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_crop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/crop"
            android:src="@drawable/edit_image_crop_selector" />

    </LinearLayout>

</LinearLayout>

