<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_tool_detail_height"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_tool_detail_height"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/back_to_main"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/image_edit_back" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ratio_list_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true"
        android:background="@color/top_bar_bg">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ViewFlipper
            android:id="@+id/banner_flipper"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:flipInterval="1000"
            android:gravity="center">

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </ViewFlipper>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line__spilt" />
</LinearLayout>