<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">


    <FrameLayout
        android:id="@+id/work_space"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black">

        <com.yjing.imageeditlibrary.editimage.view.imagezoom.ImageViewTouch
            android:id="@+id/main_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center" />

        <com.yjing.imageeditlibrary.editimage.view.StickerView
            android:id="@+id/sticker_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.yjing.imageeditlibrary.editimage.view.CropImageView
            android:id="@+id/crop_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.yjing.imageeditlibrary.editimage.view.RotateImageView
            android:id="@+id/rotate_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.yjing.imageeditlibrary.editimage.view.TextStickerView
            android:id="@+id/text_sticker_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.yjing.imageeditlibrary.editimage.view.CustomPaintView
            android:id="@+id/custom_paint_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.yjing.imageeditlibrary.editimage.view.mosaic.MosaicView
            android:id="@+id/mosaic_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true"
        android:background="@color/top_bar_bg">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ViewFlipper
            android:id="@+id/banner_flipper"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:flipInterval="1000"
            android:gravity="center">

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/apply"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </ViewFlipper>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_main_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_banner_height"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_banner_bg"></FrameLayout>

    <FrameLayout
        android:id="@+id/fl_edit_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_banner_bg"
        android:visibility="gone"></FrameLayout>
    <FrameLayout
        android:id="@+id/fl_edit_above_mainmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fl_main_menu"
        android:background="@color/bottom_banner_bg"
        android:visibility="gone"></FrameLayout>

</RelativeLayout>